Added 'selectors','highlight' and '20-boxes' pages and corrected tab titles of 'images', 'lists-and-texts'

--- a/Misc/index.html
+++ b/Misc/index.html
@@ -12,6 +12,8 @@
     <div class="megaflex">
         <div class="categories"><a class="categlink" href="./images/dist/index.html">Images</a></div>
         <div class="categories"><a class="categlink" href="./lists-and-texts/dist/index.html">Lists and text</a></div>
+        <div class="categories"><a class="categlink" href="./selectors/selectors.html">Selectors</a></div>
+        <div class="categories"><a class="categlink" href="./highlight box/highlight.html">Highlight</a></div>
     </div>
 
     <button class="backbutton"><a class="backlink" href="../index.html">Back</a></button>
