--- a/Flexing/index.html
+++ b/Flexing/index.html
@@ -12,8 +12,11 @@
         <div class="categories"><a class="categlink" href="./4-boxes/dist/index.html">Four boxes</a></div>
         <div class="categories"><a class="categlink" href="./all-together/dist/index.html">All in one</a></div>
         <div class="categories"><a class="categlink" href="./basic-flex/dist/index.html">Basic</a></div>
+    </div>
+    <div class="megaflex">
         <div class="categories"><a class="categlink" href="./fixed-header/dist/index.html">Fixed header</a></div>
         <div class="categories"><a class="categlink" href="./typical-layout/dist/index.html">Layout</a></div>
+        <div class="categories"><a class="categlink" href="./20-boxes/20-boxes.html">Twenty boxes</a></div>
     </div>
 
     <button class="backbutton"><a class="backlink" href="../index.html">Back</a></button>
